--- a/thesis/src/app/views/calendar/calendar.component.html
+++ b/thesis/src/app/views/calendar/calendar.component.html
@@ -2,7 +2,7 @@
 <app-navbar2 *ngIf="!bolean"></app-navbar2>
 <div class="panel-header" style="background-image: url('assets/img/bg19.jpg')">
   <div class="header text-center">
-    <h2 class="title">Your Calendar</h2>
+    <h2 class="title">           </h2>
     <p class="category">
       <a target="_blank" href="https://fullcalendar.io/">Don't Forget Your Interview </a>
      
