--- a/thesis/src/app/views/company/company.component.html
+++ b/thesis/src/app/views/company/company.component.html
@@ -10,9 +10,9 @@
                             <i class="now-ui-icons media-2_sound-wave"></i>
                         </div>
                         <div class="description">
-                            <h5 class="info-title">Marketing</h5>
+                            <h5 class="info-title">Manage your NGFORCE account</h5>
                             <p class="description">
-                                We've created the marketing campaign of the website. It was a very interesting collaboration.
+                                Fill your account with as much information as you can; Make your profil interesting.
                             </p>
                         </div>
                     </div>
@@ -21,9 +21,9 @@
                             <i class="now-ui-icons media-1_button-pause"></i>
                         </div>
                         <div class="description">
-                            <h5 class="info-title">Fully Coded in HTML5</h5>
+                            <h5 class="info-title">Applying process</h5>
                             <p class="description">
-                                We've developed the website with HTML5 and CSS3. The client has access to the code using GitHub.
+                                choose a position that suits your field of expertise.
                             </p>
                         </div>
                     </div>
@@ -32,9 +32,9 @@
                             <i class="now-ui-icons users_single-02"></i>
                         </div>
                         <div class="description">
-                            <h5 class="info-title">Built Audience</h5>
+                            <h5 class="info-title">Iterview</h5>
                             <p class="description">
-                                There is also a Fully ble CMS Admin Dashboard for this product.
+                                You are provided with a calender to help with the interviews time setting 
                             </p>
                         </div>
                     </div>
@@ -123,21 +123,21 @@
             <div class="col-md-4">
                 <div class="card card-pricing card-plain">
                     <div class="card-body">
-                        <h6 class="category">Enterprise</h6>
+                        <h6 class="category">BASIC</h6>
                         <h1 class="card-title">
-                            <small>DT</small>59</h1>
+                            <small></small>300 DT</h1>
                         <ul>
                             <li>
-                                <b>10GB</b> Disk Space</li>
+                                <b>10 POSTS</b></li>
                             <li>
-                                <b>100GB</b> Monthly Bandwidth</li>
+                                <b>Video & Chat</b></li>
                             <li>
-                                <b>20</b> Email Accounts</li>
+                                <b>Caendar</b></li>
                             <li>
-                                <b>Unlimited</b> subdomains</li>
+                                <b>Unlimited</b> Candidats</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
-                            Sign Up
+                        <a href="#pablo" class="btn btn-primary btn-round" (click)="onSubmitPayment()">
+                            Pay Now
                         </a>
                     </div>
                 </div>
@@ -145,21 +145,21 @@
             <div class="col-md-4">
                 <div class="card card-pricing card-background card-raised" style="background-image: url('assets/img/pricing2.jpg')">
                     <div class="card-body">
-                        <h6 class="category text-info">Professional</h6>
+                        <h6 class="category text-info">PREMIUM</h6>
                         <h1 class="card-title">
-                            <small>DT</small>29</h1>
+                            <small></small>1200 DT</h1>
                         <ul>
                             <li>
-                                <b>5GB</b> Disk Space</li>
+                                <b>50 POSTS</b> </li>
                             <li>
-                                <b>50GB</b> Monthly Bandwidth</li>
+                                <b>Video & Chat</b>  </li>
                             <li>
-                                <b>10</b> Email Accounts</li>
+                                <b>Calendar</b> </li>
                             <li>
-                                <b>Unlimited</b> subdomains</li>
+                                <b>Unlimited Candidats</b> </li>
                         </ul>
-                        <a href="#pablo" class="btn btn-neutral btn-round">
-                            Sign Up
+                        <a href="#pablo" class="btn btn-neutral btn-round" (click)="onSubmitPayment()">
+                            Pay Now
                         </a>
                     </div>
                 </div>
@@ -167,21 +167,21 @@
             <div class="col-md-4">
                 <div class="card card-pricing card-plain">
                     <div class="card-body">
-                        <h6 class="category">Standard</h6>
+                        <h6 class="category">PRO</h6>
                         <h1 class="card-title">
-                            <small>DT</small>17</h1>
+                            <small></small>500 DT</h1>
                         <ul>
                             <li>
-                                <b>2GB</b> Disk Space</li>
+                                <b>30 POSTS</b></li>
                             <li>
-                                <b>25GB</b> Monthly Bandwidth</li>
+                                <b>Video & Chat</b> </li>
                             <li>
-                                <b>5</b> Email Accounts</li>
+                                <b>Calendar</b> </li>
                             <li>
-                                <b>Unlimited</b> subdomains</li>
+                                <b>Unlimited Candidats</b> </li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
-                            Get Started
+                        <a class="btn btn-primary btn-round" (click)="onSubmitPayment()">
+                            Pay Now
                         </a>
                     </div>
                 </div>
