--- a/thesis/src/app/views/profil/profil.component.css
+++ b/thesis/src/app/views/profil/profil.component.css
@@ -1,8 +1,16 @@
-/* .phot {
-    margin-top: 450px;
-    margin-left: 6px;
-}
-.tex{
-    margin-top:470px;
+
+#info {
     
-} */
+   
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-left: 0cm;
+    height: 450px;
+    width: 400px;
+    border-color:orangered
+    
+}
+
+
+
+
