--- a/thesis/src/app/views/profil/profil.component.html
+++ b/thesis/src/app/views/profil/profil.component.html
@@ -1,7 +1,7 @@
 <app-navbar3></app-navbar3>
 <div class="wrapper">
-    <div class="page-header page-header-small" filter-color="orange">
-        <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/project5.jpg') ;">
+    <div class="page-header page-header-small" filter-color="">
+        <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/bg27.jpg') ;">
         </div>
         <div class="content-center">
             <div class="photo-container phot">
@@ -14,27 +14,64 @@
              </div>
         
     </div>
-    <div class="section">
-        <div class="container">
-            <h3 class="title">EMAIL</h3>
-            <h5 class="description text-center">{{cv.email}}</h5>
-            <h3 class="title">PHONE</h3>
-            <h5 class="description text-center">{{cv.phone}}</h5>
-            <h3 class="title">Age</h3>
-            <h5 class="description text-center">{{cv.age}} ans</h5>
-            <h3 class="title">PROFIL PRESENTATION & SCHOOL BACKGROUND</h3>
-            <h5 class="description text-center">{{cv.descProfil}}</h5>
-            <h3 class="title">FIELD</h3>
-            <h5 class="description text-center">{{cv.field}}</h5>
-            <h3 class="title">STUDY LEVEL</h3>
-            <h5 class="description text-center">{{cv.studylevel}}</h5>
-            <h3 class="title">YEARS OF EXPERIENCE</h3>
-            <h5 class="description text-center">{{cv.expyear}}</h5>
-            <h3 class="title">PROFESIONNAL EXPERIENCE</h3>
-            <h5 class="description text-center">{{cv.ProfExp}}</h5>
-            <h3 class="title">HOME ADRESS</h3>
-            <h5 class="description text-center">{{cv.adress}}</h5>
-           
+          
+    <!--  -->
+
+    <div style="display: flex; flex-wrap: wrap">
+        <div class="container" style="max-width: 500px;" >
+      
+          <div class="card">
+            <!-- <img
+              class="card-img-top"
+              src="assets/img/PROFIL.jpg"
+              alt="Card image cap"
+            /> -->
+            <div class="card-body">
+              <h5 class="card-title"> Personal Information  </h5>
+            
+              <p class="card-text">{{cv.descProfil}}</p>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">  <i class="now-ui-icons ui-1_email-85"></i>EMAIL <h5 >{{cv.email}}</h5></li>
+                <li class="list-group-item"> <i class="now-ui-icons education_hat"></i>PHONE <h5 >{{cv.phone}}</h5> </li>
+                <li class="list-group-item"><i class="now-ui-icons shopping_shop"></i>HOME ADRESS <h5 >{{cv.adress}}</h5> </li>
+                <li class="list-group-item"><i class="now-ui-icons users_single-02"></i>Age <h5 >{{cv.age}} ans</h5></li>
+              </ul>
+       
+            </div>
+          </div>
+        
         </div>
-    </div>
+      </div>
+  
+    <div style="display: flex; flex-wrap: wrap">
+        <div class="container" style="max-width: 500px;" >
+      
+          <div class="card">
+            <!-- <img
+              class="card-img-top"
+              src="assets/img/PROFIL.jpg"
+              alt="Card image cap"
+            /> -->
+            <div class="card-body">
+              <h5 class="card-title"> Professional Information  </h5>
+            
+              <p class="card-text">{{cv.descProfil}}</p>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"> <i class="now-ui-icons business_badge"></i> FIELD  <h5 >{{cv.field}}</h5></li>
+                <li class="list-group-item"> <i class="now-ui-icons education_hat"></i>STUDY LEVEL <h5 >{{cv.studylevel}}</h5> </li>
+                <li class="list-group-item"><i class="now-ui-icons business_briefcase-24"></i> YEARS OF EXPERIENCE<h5 >{{cv.expyear}}</h5> </li>
+                <li class="list-group-item"><i class="now-ui-icons business_briefcase-24"></i> PROFESIONNAL EXPERIENCE <h5 >{{cv.ProfExp}}</h5></li>
+              </ul>
+       
+            </div>
+          </div>
+        
+        </div>
+      </div>
+      
+     
+  
+    <!--  -->
+   
 </div>
+
