--- a/thesis/src/app/views/searchc/searchc.component.html
+++ b/thesis/src/app/views/searchc/searchc.component.html
@@ -71,13 +71,9 @@
             <div class="container" style="max-width: 500px;"  *ngFor="let data of datas">
           
               <div class="card">
-                <!-- <img
-                  class="card-img-top"
-                  src="assets/img/PROFIL.jpg"
-                  alt="Card image cap"
-                /> -->
-                <div class="card-body">
-                  <h5 class="card-title">{{data.name}}</h5>
+                <a href="#pablo"> <img class="img rounded" src="assets/img/card-blog2.jpg"></a>
+                 <div class="card-body">
+                  <h5 class="card-title"><a href="#pablo">{{data.name}}</a></h5>
                   <h4 class="card-title">{{data.email}}</h4>
                   <p class="card-text">   {{data.descProfil}}</p>
                   <ul class="list-group list-group-flush">
@@ -86,7 +82,7 @@
                     <li class="list-group-item">  {{data.expyear}}</li>
                     <li class="list-group-item">  {{data.field}}</li>
                   </ul>
-                  <button type="button" class="btn btn-primary btn-link">Send Message</button> 
+                  <button type="button" class="btn btn-primary btn-link" [routerLink]="['/views/chat']">Send Message</button> 
                   <button type="button" class="btn btn-primary btn-just-icon" ngbTooltip="add to favorites"><i class="fa fa-heart"></i></button>
                   
                 </div>
@@ -94,6 +90,7 @@
             
             </div>
           </div>
+          
                             
         <div class="about-office">
             <div class="container">
