--- a/thesis/src/app/shared/navbar2/navbar2.component.html
+++ b/thesis/src/app/shared/navbar2/navbar2.component.html
@@ -8,19 +8,19 @@
                 <i class="now-ui-icons ui-1_simple-add"></i>
                 POST
              </a>
-             <a class="navbar-brand" [routerLink]="['/views/searchc']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand" [routerLink]="['/views/searchc']" placement="bottom" >
                 <i class="now-ui-icons ui-1_zoom-bold"></i>
                 Search
               </a>
-             <a class="navbar-brand" [routerLink]="['/views/calendar']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand" [routerLink]="['/views/calendar']" placement="bottom">
                 <i class="now-ui-icons ui-1_calendar-60"></i>
                 Calender
              </a>
-             <a class="navbar-brand" [routerLink]="['/views/chat']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand" [routerLink]="['/views/chat']" placement="bottom" >
                 <i class="now-ui-icons ui-2_chat-round"></i>
                 Chat
              </a>
-             <a class="navbar-brand"  placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand"  placement="bottom" >
                 <i class="now-ui-icons ui-1_bell-53"></i>
                 Notifications
              </a>
