--- a/thesis/src/app/views/profil/profil.component.html
+++ b/thesis/src/app/views/profil/profil.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="content-center">
             <div class="photo-container phot">
-                <img src="assets/img/PROFIL.jpg" alt="">
+                <img src={{cv.img}} alt="">
            </div>
             <h2 class="title tex">{{datas.name}}</h2>
             <br/>
