--- a/thesis/src/app/views/notificationuser/notificationuser.component.html
+++ b/thesis/src/app/views/notificationuser/notificationuser.component.html
@@ -12,11 +12,12 @@
     </div>
     </div>
     <div class="section">
-        <h3 class="title">NOTIFATTIONS</h3>
-        <div class="container" *ngFor="let msg of message">
+        <h3 class="title">NOTIFICATIONS</h3>
+        <div class="container" *ngFor="let msg of messages">
             
             <h2 class="description text-center">{{msg.message}}</h2>
 
 </div>
+<h2 class="description text-center">{{sended}}</h2>
 </div>
 </div>
