--- a/thesis/src/app/chat/sidebar/sidebar.component.html
+++ b/thesis/src/app/chat/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
         <div class="content">
           <div class="conversationHeader">
             <div class="name">{{ conversation._id.name }}</div>
-            <div class="time">{{ conversation.last }}</div>
+            <div class="time">{{today}}</div>
           </div> 
           <div class="message">
             <img
