--- a/thesis/src/app/chat/chat.component.html
+++ b/thesis/src/app/chat/chat.component.html
@@ -1,5 +1,5 @@
-<app-navbar3 *ngIf="bolean"></app-navbar3>
-<app-navbar2 *ngIf="!bolean"></app-navbar2>
+<!-- <app-navbar3 *ngIf="bolean"></app-navbar3>
+<app-navbar2 *ngIf="!bolean"></app-navbar2> -->
 
 <div id="background_header"></div>
 <div id="background_body"></div>
