--- a/thesis/src/app/views/post/post.component.html
+++ b/thesis/src/app/views/post/post.component.html
@@ -24,7 +24,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
                     </div>
-                    <input type="text"  name="CompanyName" [(ngModel)]="CompanyName"class="form-control" placeholder="Company Name..." (focus)="focus1=true"
+                    <input type="text"  name="companyName" [(ngModel)]="companyName" class="form-control" placeholder="Company Name..." (focus)="focus1=true"
                       (blur)="focus1=false">
                 </div>
                </div>
