--- a/thesis/src/app/views/searchu/searchu.component.html
+++ b/thesis/src/app/views/searchu/searchu.component.html
@@ -104,7 +104,7 @@
           alt="Card image cap"
         /> -->
         <div class="card-body">
-          <h5 class="card-title">{{ data.CompanyName }}</h5>
+          <h5 class="card-title">{{ data.companyName }}</h5>
           <h4 class="card-title">{{ data.OfferTitle }}</h4>
           <p class="card-text">{{ data.OfferDescription }}</p>
           <ul class="list-group list-group-flush">
