rename and refactoring and cleaning

--- a/thesis/src/app/views/post/post.component.html
+++ b/thesis/src/app/views/post/post.component.html
@@ -36,7 +36,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"> <i class="now-ui-icons tech_mobile"></i></span>
                 </div>
-                <input type="text" name="OfferTitle" [(ngModel)]="OfferTitle" placeholder="OfferTitle Here..." class="form-control" (focus)="focus2=true"
+                <input type="text" name="offerTitle" [(ngModel)]="offerTitle" placeholder="OfferTitle Here..." class="form-control" (focus)="focus2=true"
                   (blur)="focus2=false">
               </div>
             </div> 
@@ -47,7 +47,7 @@
   
               <div class="form-group" id="space">
                 <label>Offer description</label>
-                <input type="text" name="OfferDescription" [(ngModel)]="OfferDescription" placeholder="Offer description..." class="form-control" (focus)="focus2=true"
+                <input type="text" name="offerDescription" [(ngModel)]="offerDescription" placeholder="Offer description..." class="form-control" (focus)="focus2=true"
                 (blur)="focus2=false">
               </div>
               
