--- a/thesis/src/app/views/home/home.component.html
+++ b/thesis/src/app/views/home/home.component.html
@@ -30,15 +30,15 @@
         <div class="card card-testimonial">
           <div class="card-body">
             <p class="card-description">
-              {{ data.OfferDescription }}
+              {{ data.offerDescription }}
             </p>
           </div>
 
           <div class="card-footer">
-            <h4 class="card-title">{{ data.OfferTitle }}</h4>
-            <p class="category">{{ data.TypeOfContract }}</p>
-            <p class="category">{{ data.Salary }}</p>
-            <p class="category">{{ data.YearsOfExperience }}</p>
+            <h4 class="card-title">{{ data.offerTitle }}</h4>
+            <p class="category">{{ data.typeOfContract }}</p>
+            <p class="category">{{ data.salary }}</p>
+            <p class="category">{{ data.yearsOfExperience }}</p>
           </div>
 
           <form
