--- a/thesis/src/app/shared/navbar2/navbar2.component.html
+++ b/thesis/src/app/shared/navbar2/navbar2.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg bg-white fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" [routerLink]="['/views/home']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+            <a class="navbar-brand" [routerLink]="['/views/home']" placement="bottom" >
                Home
             </a>
-            <a class="navbar-brand" [routerLink]="['/views/post']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+            <a class="navbar-brand" [routerLink]="['/views/post']" placement="bottom" >
                 <i class="now-ui-icons ui-1_simple-add"></i>
                 POST
              </a>
