--- a/thesis/src/app/shared/navbar3/navbar3.component.html
+++ b/thesis/src/app/shared/navbar3/navbar3.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-white fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-           <a class="navbar-brand" [routerLink]="['/views/profil']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+           <a class="navbar-brand" [routerLink]="['/views/profil']" placement="bottom" >
             <i class="now-ui-icons users_circle-08"></i>
                 Profil
              </a>
